# zen

./: .gitignore  CLAUDE.md  README.md  package.json
app/: .env.example  app.base.json  app.config.js  app.json  package.json
app/app/: _layout.tsx  onboarding.tsx
app/constants/: terminalThemes.ts  tokens.ts
app/modules/zen-terminal-vt/android/: CMakeLists.txt  build.gradle
app/modules/zen-terminal-vt/android/src/main/cpp/: jni_bridge.cpp
app/modules/zen-terminal-vt/android/src/main/java/expo/modules/zenterminalvt/: ZenTerminalVtModule.kt
app/services/: agentCommands.ts  agentPresentation.ts  ansi.tsx  auth.ts  codexConversation.ts  connection.ts  connectionIssue.ts  dueDate.ts  gitDiff.ts  importConnection.ts  nativeTerminalDiagnostics.ts  pairing.ts  serverLatency.ts  serverSelection.ts  sessionKeys.ts  sessionServices.ts  storage.ts  taskFeed.ts  taskIdentity.ts  taskState.ts  uploads.ts  websocket.ts
app/store/: agents.tsx  issues.tsx  tasks.tsx  work.tsx
daemon/: Dockerfile  go.mod  go.sum
daemon/auth/: auth.go  auth_test.go
daemon/classifier/: classifier.go  classifier_test.go
daemon/issue/: adapters.go  dispatch.go  dispatch_test.go  doc.go  executors.go  executors_test.go  parser.go  parser_test.go  paths.go  project.go  project_test.go  store.go  store_test.go  types.go
daemon/push/: push.go  push_test.go
daemon/scripts/: debug_create_session.go
daemon/server/: codex_asset_test.go  (+9 more)
docs/: agent-native-task-model.md  architecture.md  issues-redesign.md  notifications.md
scripts/: build-libghostty.sh  capture-android-crash.sh
(+147 files in other folders)
